<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_update_grades"
        android:orderInCategory="100"
        android:title="@string/update_grades" />

    <item
        android:id="@+id/action_update_trezentos_grades"
        android:orderInCategory="100"
        android:title="@string/update_trezentos_grades"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_groups"
        android:orderInCategory="100"
        android:title="@string/sort_groups"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_send_evaluation"
        android:orderInCategory="200"
        android:title="@string/send_evaluation"
        app:showAsAction="never" />
</menu>