...
        android:gravity="center|center_horizontal"
        android:background="@drawable/shape_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nota"
                android:layout_marginBottom="2.5dp"
                android:textColor="#FFF"
                android:textSize="35dp"
                android:gravity="center"
                />
    </LinearLayout>
...

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="ok"
            android:textColor="#FFF"
            android:background="@drawable/shape_item"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
...
