<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/salas_item"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/salas"
        app:showAsAction="never" />
    <item
        android:id="@+id/usuario_item"
...
