<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="5dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="4dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exam_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:text="Nome Teste"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#272727" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/date_creation"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="20dp"
                android:textSize="11dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#A7A7A7"
                android:text="Criado em 15/09/2017"/>

        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>