<LinearLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="250dp"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@color/colorDialogFragmentClass"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/examname"
        android:inputType="textPersonName"
        android:hint="@string/name_exam"
        android:textColor="@color/white"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="1">

        <Button
            android:id="@+id/cancel_create_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="Cancel"
            android:textColor="@color/white"
            android:background="#30000000"

            />


        <Button
            android:id="@+id/ok_create_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="Criar"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:background="#30000000"

            />


        ></LinearLayout>

</LinearLayout>
